Flagger/invogue-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: octank-invogue
spec:
  hosts:
  - octank-invogue
  http:
  - route:
    - destination:
        host: octank-invogue
